syntax = "proto3";

package core.v1;
option go_package = "auth-service/proto/core/v1;corev1";

import "google/protobuf/timestamp.proto";

import "validate/validate.proto";

// UUID with format validation
message UUID {
  // Resource UUID
  string value = 1 [ (validate.rules).string = {
    pattern : "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-"
    "9a-fA-F]{12}$",
    ignore_empty : true
  } ];
}

message OperationResult {
  // Whether the operation completed successfully
  bool success = 1;
}

// Identity enums (shared by auth and users)

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_ADMIN       = 1;
  USER_ROLE_USER        = 2;
  USER_ROLE_GUEST       = 3;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_PENDING     = 1;
  USER_STATUS_ACTIVE      = 2;
  USER_STATUS_SUSPENDED   = 3;
  USER_STATUS_DELETED     = 4;
}

// Name "DecimalValue" prevents conflict with C# Decimal type
// Adapted from
// https://github.com/googleapis/googleapis/blob/master/google/type/money.proto
message DecimalValue {
  // The whole units of the amount.
  int64 units = 1;

  // Number of nano (10^-9) units of the amount.
  // The value must be between -999,999,999 and +999,999,999 inclusive.
  // If `units` is positive, `nanos` must be positive or zero.
  // If `units` is zero, `nanos` can be positive, zero, or negative.
  // If `units` is negative, `nanos` must be negative or zero.
  // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.
  int32 nanos = 2;
}

message DateRange {
  google.protobuf.Timestamp from_date = 1;
  google.protobuf.Timestamp to_date   = 2;
}

message FileBytes { bytes data = 1; }

message FileData {
  string file_name = 1;
  string file_hash = 2;
  bytes  data      = 3;
}
